kubernetes/manifests/grafana/grafana-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service-clusterip
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 80
      #Ip du container openhab (voir deploiement du pod)
      targetPort: 3000
