kubernetes/manifests/grafana/grafana-ingress-resources.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: grafana-ingress-resources
spec:
   rules:
   - host: grafana.guiet.lan
     http:
        paths:
        - backend:
           serviceName: grafana-service-clusterip
           servicePort: 80
